objects/npsp__Error_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings that control your error management configuration.</description>
    <fields>
        <fullName>npsp__Async_Error_Check_Last_Run__c</fullName>
        <description>If checked, NPSP&apos;s error handling framework is disabled.</description>
        <inlineHelpText>Used to keep track of the most recent execution of the Async job error logger</inlineHelpText>
        <label>Async Error Check Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>npsp__DisableRecordDataHealthChecks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether record data related health checks are disabled</description>
        <inlineHelpText>If selected, Health Check only checks your NPSP configuration settings for problems. Select this option if your organization has a large volume of records and Health Check is having problems completing.</inlineHelpText>
        <label>Disable Record Data Health Checks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Disable_Error_Handling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, NPSP&apos;s error handling framework is disabled.</description>
        <inlineHelpText>If checked, NPSP&apos;s error handling framework is disabled.</inlineHelpText>
        <label>Disable Error Handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Don_t_Auto_Schedule_Default_NPSP_Jobs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, NPSP won&apos;t automatically schedule default recurring jobs.

These recurring jobs calculate rollups, update recurring donations and seasonal address, and perform error handling.

When checked, every time you visit the NPSP Settings page, NPSP verifies that the default recurring jobs are scheduled. Rescheduling only applies to missing jobs, not updated jobs.

To view these jobs, search for Scheduled Jobs in Salesforce Setup.</description>
        <inlineHelpText>When checked, NPSP won&apos;t automatically schedule default recurring jobs. These recurring jobs calculate rollups, update recurring donations and seasonal address, and perform error handling.</inlineHelpText>
        <label>Don&apos;t Auto Schedule Default NPSP Jobs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Enable_Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Turn this on to enable debug statements in managed package code.</description>
        <inlineHelpText>Turn this on to enable debug statements in managed package code.</inlineHelpText>
        <label>Enable Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Error_Notifications_On__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether to send error notifications.</description>
        <inlineHelpText>Check this if you&apos;d like the system to post notifications for certain type of errors.</inlineHelpText>
        <label>Error Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Error_Notifications_To__c</fullName>
        <description>Who should receive error notifications.</description>
        <inlineHelpText>Select the type of user to send notifications to.</inlineHelpText>
        <label>Error Notification Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npsp__OverrideFeature_PilotEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do Not Update. For Salesforce.org pilot testing only. Allows limited access override of the PilotEnabled Feature Parameter in Scratch Orgs to support pilot testing in orgs where there is no associated Product License in the LMO.</description>
        <inlineHelpText>Do Not Update. For Salesforce.org pilot testing only. Allows limited access override of the PilotEnabled Feature Parameter in Scratch Orgs to support pilot testing in orgs where there is no associated Product License in the LMO.</inlineHelpText>
        <label>Scratch Org Override: Pilot Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Respect_Duplicate_Rule_Settings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ensures that the &quot;Allow&quot; setting (on the Duplicate Rule) is respected when duplicates are identified.</description>
        <inlineHelpText>Respect the settings on a Duplicate Rule that control whether duplicate records are allowed. To check existing settings, go to Duplicate Rules under Setup. When the Action On Create or Action On Edit fields are set to &quot;Allow,&quot; duplicates will be saved.</inlineHelpText>
        <label>Respect Duplicate Rule Settings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Store_Errors_On__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag that indicates whether errors are going to be stored in the database.</description>
        <inlineHelpText>Check this if you&apos;d like errors to be stored in the database.</inlineHelpText>
        <label>Store Errors</label>
        <type>Checkbox</type>
    </fields>
    <label>Error Settings</label>
</CustomObject>